--- a/confcrawl/confcrawl/config/example.conf
+++ b/confcrawl/confcrawl/config/example.conf
@@ -1,4 +1,10 @@
 {
-    "allowed_domains" :"360doc.com",
-    "start_urls"      : "http://blog.hopez.org/resource"
+    "domains" :["ifeng.com"],
+    "start_urls"      : [
+                        "http://news.ifeng.com/a/20150819/44466327_0.shtml",
+                        "http://news.haiwainet.cn/n/2015/0819/c3541092-29073759.html?source=bdxsy",
+                        "http://club.domain.cn/forum.php?mod=viewthread&tid=1879100&highlight=",
+                        "http://news.21cn.com/social/shixiang/a/2015/0825/16/29955724.shtml"
+                        ]
+
 }
